--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,21 +1,14 @@
-.main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    left: 0;
-    top: 60px;
-    width: 100vw;
-    height: calc(100vh - 60px);
+.logo {
+    height: 40px;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
 }
 
-.card {
-    display: flex;
-    width: 500px !important;
-    align-items: center;
-}
-
-.ButtonLeft {
-    position: absolute;
-    left: -30px;
+.sidebar {
+    background-color: #fdec4f;
+    min-height: calc(100vh - 95px);
+    max-height: calc(100vh - 95px);
+    overflow-y:auto;
 }
