Add UI to create or add QR

--- a/src/components/QRCreate/QRCreate.module.css
+++ b/src/components/QRCreate/QRCreate.module.css
@@ -2,3 +2,14 @@
     width: 150px;
     border-radius: 10%;
 }
+
+.addQrButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.topBorder {
+    border-top: 1px solid lightgrey;
+    padding-top: 5px;
+}
