--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -7,8 +7,13 @@
 }
 
 .sidebar {
-    background-color: #fdec4f;
-    min-height: calc(100vh - 95px);
-    max-height: calc(100vh - 95px);
+    min-height: calc(100vh - 80px);
+    max-height: calc(100vh - 80px);
     overflow-y:auto;
+}
+
+.addQrButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
 }
