--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -7,8 +7,8 @@
 }
 
 .sidebar {
-    min-height: calc(100vh - 80px);
-    max-height: calc(100vh - 80px);
+    min-height: 100%;
+    max-height: 100%;
     overflow-y:auto;
 }
 
@@ -16,4 +16,8 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
+}
+
+.gridHeight {
+    min-height: calc(100% - 80px);
 }
