--- a/src/components/QRView/QRView.module.css
+++ b/src/components/QRView/QRView.module.css
@@ -4,8 +4,9 @@
 }
 
 .card {
-    margin: 50px;
+    margin: 3vw;
     display: flex;
+    width: 80% !important;
     max-width: 800px !important;
     align-items: center;
 }
